@@ -95,7 +95,7 @@ _Description: Show Cylinder/Head/Sector information
 
 Template: partman/text/finished_with_partition
 Type: text
-_Description: Finished setting up partition
+_Description: Done setting up the partition
 
 Template: partman/text/end_the_partitioning
 Type: text
